FIX: [header] smaller on mobile

--- a/css/awesome-lahar.css
+++ b/css/awesome-lahar.css
@@ -55,6 +55,9 @@ button:focus {
 }
 
 @media only screen and (max-width: 400px) {
+    .search-form {
+        top: 56px;
+    }
     .search-form label {
         margin-top: 10%;
     }
@@ -121,7 +124,8 @@ input[type="search"]::-webkit-search-results-decoration {
 
 @media only screen and (max-width: 400px) {
     .header {
-        padding: 15px 20px;
+        padding: 0 20px;
+        padding-top: 6px;
         width: calc(100% - 40px);
     }
 }
@@ -142,7 +146,7 @@ input[type="search"]::-webkit-search-results-decoration {
     background: white;
     z-index: 1;
     text-align: center;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 56px);
     width: 100%;
     text-transform: uppercase;
     font-weight: bold;
@@ -158,7 +162,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .menu--mobile.is-active {
-    top: 80px;
+    top: 56px;
 }
 
 @media only screen and (max-width: 820px) {
@@ -342,6 +346,14 @@ input[type="search"]::-webkit-search-results-decoration {
     opacity: 0;
     transition: 1s;
     min-height: calc(100vh - 150px);
+}
+
+@media only screen and (max-width: 400px) {
+    .body {
+        margin-top: 56px;
+        min-height: calc(100vh - 126px);
+    }
+
 }
 
 .body.idea, .body.contacts {
@@ -653,9 +665,10 @@ input[type="search"]::-webkit-search-results-decoration {
 @media only screen and (max-width: 400px) {
     .single-post__wrapper {
         margin-top: 0;
-        padding: 40px 20px;
+        padding: 20px;
         margin-bottom: 1px;
         box-shadow: none;
+        min-height: calc(100vh - 166px);
     }
 }
 
